fix z-index

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -141,7 +141,7 @@ iframe{
         background-color: #000;
         width: 100%;
         height: 100%;
-        z-index: 2147483647;
+        z-index: 90001;
         top: 0;
     }
 
