--- a/src/styles.css
+++ b/src/styles.css
@@ -622,7 +622,7 @@ button {
 /* Override JS Toast*/
 
 .jq-toast-wrap {
-    z-index: 90001 !important;
+    z-index: 10000 !important;
 }
 
 .form-control {
@@ -1732,11 +1732,11 @@ ngb-datepicker-month {
 @media only screen and (max-width: 1024px) {
 
     .modal-login{
-        z-index: 2147483649 !important;
+        z-index: 9000 !important;
     }
 
     .modal-cadastro-cliente {
-        z-index: 2147483649 !important;
+        z-index: 9000 !important;
     }
 
     *::-webkit-scrollbar{
